2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ripemd128.man: Fixed all warnings due to use of now deprecated
	* ripemd160.man: commands. Added a section about how to give feedback.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ripemd128.test: Hooked into the new common test support code.
	* ripemd160.test:

2005-10-24  Andreas Kupries <andreask@activestate.com>

	* ripemd128.bench: New file. Basic benchmarks for RIPEMD hashes.
	* ripme160.bench:

2005-10-17  Andreas Kupries <andreask@activestate.com>

	* ripemd128.tcl: Trivial comment typo fix.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-10-05  Andreas Kupries <andreask@activestate.com>

	* ripemd128.test: Added test cases demonstrating how ripemd/Trf is
	* ripemd160.test: mishandling input of specific lengths (multiples
	  of 64 bytes).

2005-02-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* ripemd128.tcl:   Arranged to run all available implementations in
	* ripemd128.test:  the tests.
	* ripemd160.tcl:
	* ripemd160.test:

2005-02-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* pkgIndex.tcl:           Incremented version to 1.0.3
	* ripemd120.tcl,man,test: Rationalised accelerator handling and added
	* ripemd160.tcl,man,test: cryptkit as accelerator for RIPEMD-160.
