@@ -1,3 +1,9 @@
+2008-04-30  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* ripemd128.tcl: Cleanup variables after initialization
+	* ripemd160.tcl:
+	* pkgIndex.tcl:  Incremented version to 1.0.4
+
 2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
